new changes in the main.js file and other things

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="styles.css" rel="stylesheet">
     <script src="scripts/main.js"></script>
 </head>
-<body onload="userName(), creatorname()">
-    <header>
+<body onload="userName(), creatorname(), fullInfo()">
+    <header >
         <a href="index.html" class="logo">Desk-Top!</a>
+        <a class="contact" onclick="officialRights(this)"> connection to <span style="color: #669999; padding-right: 5px; padding-left: 5px;"  id="ipAdress"></span> <span id="connection?" ></span></a>
     </header>
 
     <div style="display: flex; flex-wrap: wrap; justify-content: left;">
