--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <script src="scripts/main.js"></script>
 </head>
-<body onload="username(), creatorname(), fullInfo()">
+<body onload="username(), creatorname(), fullInfo(), desktopsContant()">
     <header >
         <a href="index.html" class="logo">Desk-Top!</a>
        <a class="contact" onclick="showDashbord()"> connection to <span style="color: #669999; padding-right: 5px; padding-left: 5px;"  id="ipAdress"></span> <span id="connection?" ></span></a>
